feat: ad grid for different breakpoints

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
     <header>
       <nav>
         <ul class="nav-list">
-          <li class="nav-item"><a href="homepage.html">Homepage</a></li>
+          <li class="nav-item"><a href="index.html">Homepage</a></li>
           <li class="nav-item"><a href="blogpost.html">Blogpost</a></li>
           <li class="nav-item"><a href="#"></a>About</li>
         </ul>
