feat: add footer styles

--- a/blogpost.html
+++ b/blogpost.html
@@ -40,7 +40,10 @@
           <li>Ut ullamcorper nibh dictum, rutrum ligula sed, ultrices nisl.</li>
         </ul>
       </article>
-      <section></section>
+      <section id="about">
+          <h2>Autor: Katja Runge</h2>
+          <p></p>
+      </section>
     </main>
   </body>
 </html>
