--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul class="nav-list">
           <li class="nav-item"><a href="index.html">Homepage</a></li>
           <li class="nav-item"><a href="blogpost.html">Blogpost</a></li>
-          <li class="nav-item"><a href="#"></a>About</li>
+          <li class="nav-item"><a href="blogpost.html/#about"></a>About</li>
         </ul>
       </nav>
       <section class="fullwidth-header">
@@ -46,7 +46,9 @@
           since the 1500s, when an unknown printer took a galley of type and
           scrambled
         </p>
-        <button class="card-btn" type="button"><a href="./blogpost.html">To article</a></button>
+        <button class="card-btn" type="button">
+          <a href="./blogpost.html">To article</a>
+        </button>
       </div>
       <div class="card">
         <img
@@ -61,18 +63,18 @@
           since the 1500s, when an unknown printer took a galley of type and
           scrambled
         </p>
-        <button class="card-btn" type="button"><a href="./blogpost.html">To article</a></button>
+        <button class="card-btn" type="button">
+          <a href="./blogpost.html">To article</a>
+        </button>
       </div>
     </main>
     <footer class="footer-content">
-      <p>Easy Kitchen Blog®</p>
-      <div>
-        <ul>
-          <li><a>Facebook</a></li>
-          <li><a>Instagram</a></li>
-          <li><a>Twitter</a></li>
-        </ul>
-      </div>
+      <p class="footer-title">Easy Kitchen Blog®</p>
+      <ul class="footer-list">
+        <li class="footer-list-item" ><a>Facebook</a></li>
+        <li class="footer-list-item"><a>Instagram</a></li>
+        <li class="footer-list-item"><a>Twitter</a></li>
+      </ul>
     </footer>
   </body>
 </html>
