--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul class="nav-list">
           <li class="nav-item"><a href="index.html">Homepage</a></li>
           <li class="nav-item"><a href="blogpost.html">Blogpost</a></li>
-          <li class="nav-item"><a href="blogpost.html/#about"></a>About</li>
+          <li class="nav-item"><a href="blogpost.html#about">About</a></li>
         </ul>
       </nav>
       <section class="fullwidth-header">
@@ -68,10 +68,10 @@
         </button>
       </div>
     </main>
-    <footer class="footer-content">
+    <footer class="footer-content" id="about">
       <p class="footer-title">Easy Kitchen Blog®</p>
       <ul class="footer-list">
-        <li class="footer-list-item" ><a>Facebook</a></li>
+        <li class="footer-list-item"><a>Facebook</a></li>
         <li class="footer-list-item"><a>Instagram</a></li>
         <li class="footer-list-item"><a>Twitter</a></li>
       </ul>
