feat: add styles to bloogpost

--- a/pages/blogpost.html
+++ b/pages/blogpost.html
@@ -23,15 +23,15 @@
     <header class="header-section">
       <nav class="navigation">
         <ul class="nav-list">
-          <li class="nav-item"><a href="index.html">Homepage</a></li>
-          <li class="nav-item"><a href="blogpost.html">Blogpost</a></li>
+          <li class="nav-item"><a href="../index.html">Homepage</a></li>
+          <li class="nav-item"><a href="./blogpost.html">Blogpost</a></li>
           <li class="nav-item"><a href="#about">About</a></li>
         </ul>
       </nav>
     </header>
     <main class="content-section">
       <article class="content">
-        <h2>Vegetarian Recipe</h2>
+        <h2 class="content-title">Vegetarian Recipe</h2>
         <p>
           Bacon ipsum dolor amet burgdoggen jerky tongue biltong picanha. T-bone
           pork tenderloin kielbasa boudin leberkas. Frankfurter cow landjaeger
