--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <nav class="navigation">
         <ul class="nav-list">
           <li class="nav-item"><a href="index.html">Homepage</a></li>
-          <li class="nav-item"><a href="blogpost.html">Blogpost</a></li>
-          <li class="nav-item"><a href="blogpost.html#about">About</a></li>
+          <li class="nav-item"><a href="./pages/blogpost.html">Blogpost</a></li>
+          <li class="nav-item"><a href="./pages/blogpost.html#about">About</a></li>
         </ul>
       </nav>
       <section class="fullwidth-header">
