feat: final styles

--- a/pages/blogpost.html
+++ b/pages/blogpost.html
@@ -32,7 +32,7 @@
     <main class="content-section">
       <article class="content">
         <h2 class="content-title">Vegetarian Recipe</h2>
-        <p>
+        <p class="content-paragraph">
           Bacon ipsum dolor amet burgdoggen jerky tongue biltong picanha. T-bone
           pork tenderloin kielbasa boudin leberkas. Frankfurter cow landjaeger
           short loin spare ribs ball tip, pancetta porchetta brisket chuck rump.
@@ -40,22 +40,31 @@
           ham strip steak kevin. Landjaeger pig jowl sirloin bacon pork belly
           strip steak
         </p>
-        <ol>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-          <li>Nam id neque pellentesque, mollis enim nec, gravida turpis.</li>
-          <li>
+        <p class="content-paragraph">
+          Bacon ipsum dolor amet burgdoggen jerky tongue biltong picanha. T-bone
+          pork tenderloin kielbasa boudin leberkas. Frankfurter cow landjaeger
+          short loin spare ribs ball tip, pancetta porchetta brisket chuck rump.
+        </p>
+        <ol class="content-list">
+          <li class="content-list-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+          <li class="content-list-item">Nam id neque pellentesque, mollis enim nec, gravida turpis.</li>
+          <li class="content-list-item">
             Fusce accumsan dolor nec magna hendrerit, eget aliquet mauris
             rutrum.
           </li>
-          <li>Curabitur ullamcorper neque quis dui cursus suscipit.</li>
-          <li>Ut ullamcorper nibh dictum, rutrum ligula sed, ultrices nisl.</li>
+          <li class="content-list-item">Curabitur ullamcorper neque quis dui cursus suscipit.</li>
+          <li class="content-list-item">Ut ullamcorper nibh dictum, rutrum ligula sed, ultrices nisl.</li>
         </ol>
       </article>
       <section id="about" class="biography">
-        <figure>
-          <img src="../assets/bio.jpg" alt="katja runge" />
-          <figcaption>
-            If you don't treat an ingredient and its flavors with respect - if you drown it in oil, for instance - you'll spoil it. <em>Allain Ducasse</em>
+        <figure class="image-container">
+          <img src="../assets/bio.jpg" alt="katja runge" class="bio-image" />
+          <figcaption class="image-quote">
+            <em
+              >If you don't treat an ingredient and its flavors with respect -
+              if you drown it in oil, for instance - you'll spoil it. Allain
+              Ducasse</em
+            >
           </figcaption>
         </figure>
         <div class="bio-content">
@@ -68,6 +77,12 @@
             luctus porta tortor, vitae ultrices sapien vestibulum ut. Integer
             non mauris purus. Etiam a urna diam. Vivamus feugiat malesuada arcu
             vel laoreet.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+            fermentum tortor libero, ut pulvinar sapien tempor et. Integer
+            tincidunt arcu quis nisi molestie, quis luctus diam euismod. Mauris
+            luctus porta tortor, vitae ultrices sapien vestibulum ut.
           </p>
         </div>
       </section>
