fix: add links to pictures

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="card">
         <img
           src="./assets/recipe-1.jpg"
-          alt="a vegetarian recipe"
+          alt="a vegetarian recipe https://unsplash.com/photos/4J059aGa5s4"
           class="card-image"
         />
         <h3 class="card-title">Vegetarian Recipe</h3>
@@ -52,7 +52,7 @@
       </div>
       <div class="card">
         <img
-          src="./assets/recipe-2.jpg"
+          src="./assets/recipe-2.jpg https://unsplash.com/photos/XoByiBymX20"
           alt="a vegetarian recipe"
           class="card-image"
         />
