--- a/pages/blogpost.html
+++ b/pages/blogpost.html
@@ -58,7 +58,7 @@
       </article>
       <section id="about" class="biography">
         <figure class="image-container">
-          <img src="../assets/bio.jpg" alt="katja runge" class="bio-image" />
+          <img src="../assets/bio.jpg" alt="photo from https://unsplash.com/photos/SRNMbs0zU4U " class="bio-image" />
           <figcaption class="image-quote">
             <em
               >If you don't treat an ingredient and its flavors with respect -
