fix: update image source

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       </div>
       <div class="card">
         <img
-          src="./assets/recipe-2.jpg https://unsplash.com/photos/XoByiBymX20"
-          alt="a vegetarian recipe"
+          src="./assets/recipe-2.jpg"
+          alt="a vegetarian recipe https://unsplash.com/photos/XoByiBymX20"
           class="card-image"
         />
         <h3 class="card-title">Asian Soup Recipe</h3>
