fix: update card links

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           scrambled
         </p>
         <button class="card-btn" type="button">
-          <a href="./blogpost.html">To article</a>
+          <a href="./pages/blogpost.html">To article</a>
         </button>
       </div>
       <div class="card">
@@ -64,7 +64,7 @@
           scrambled
         </p>
         <button class="card-btn" type="button">
-          <a href="./blogpost.html">To article</a>
+          <a href="./pages/blogpost.html">To article</a>
         </button>
       </div>
     </main>
