fix: apply changes

--- a/pages/blogpost.html
+++ b/pages/blogpost.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Easy Kitchen Vegetarian Recipes" />
     <title>Easy Kitchen Blogpost</title>
-    <link rel="stylesheet" href="../styles/blogpost.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <!-- headlines font -->
     <link
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="main-content">
+  <body class="bp-main-content">
     <header class="header-section">
       <nav class="navigation">
         <ul class="nav-list">
@@ -46,25 +46,55 @@
           short loin spare ribs ball tip, pancetta porchetta brisket chuck rump.
         </p>
         <ol class="content-list">
-          <li class="content-list-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-          <li class="content-list-item">Nam id neque pellentesque, mollis enim nec, gravida turpis.</li>
+          <li class="content-list-item">
+            Lorem ipsum dolor sit amet, <b>consectetur adipiscing elit.</b>
+          </li>
+          <li class="content-list-item">
+            Nam id neque pellentesque, mollis enim nec, gravida turpis.
+          </li>
           <li class="content-list-item">
             Fusce accumsan dolor nec magna hendrerit, eget aliquet mauris
             rutrum.
           </li>
-          <li class="content-list-item">Curabitur ullamcorper neque quis dui cursus suscipit.</li>
-          <li class="content-list-item">Ut ullamcorper nibh dictum, rutrum ligula sed, ultrices nisl.</li>
+          <li class="content-list-item">
+            Curabitur ullamcorper neque quis dui cursus suscipit.
+          </li>
+          <li class="content-list-item">
+            Ut ullamcorper nibh dictum, rutrum ligula sed, ultrices nisl.
+          </li>
         </ol>
+        <br />
+        <p class="content-paragraph">
+          Bacon ipsum dolor amet burgdoggen jerky tongue biltong picanha. T-bone
+          pork tenderloin kielbasa boudin leberkas. Frankfurter cow landjaeger
+          short loin spare ribs ball tip, pancetta porchetta brisket chuck rump.
+          Pastrami brisket tenderloin tongue sirloin, bacon filet mignon jerky
+          ham strip steak kevin. Landjaeger pig jowl sirloin bacon pork belly
+          strip steak
+        </p>
+        <p class="content-paragraph">
+          Bacon ipsum dolor amet burgdoggen jerky tongue biltong picanha. T-bone
+          pork tenderloin kielbasa boudin leberkas. <b>Frankfurter cow landjaeger
+          short loin spare ribs ball tip.</b>
+        </p>
       </article>
       <section id="about" class="biography">
         <figure class="image-container">
-          <img src="../assets/bio.jpg" alt="photo from https://unsplash.com/photos/SRNMbs0zU4U " class="bio-image" />
+          <img
+            src="../assets/bio.jpg"
+            alt="photo from https://unsplash.com/photos/SRNMbs0zU4U "
+            class="bio-image"
+          />
           <figcaption class="image-quote">
-            <em
-              >If you don't treat an ingredient and its flavors with respect -
-              if you drown it in oil, for instance - you'll spoil it. Allain
-              Ducasse</em
+            <blockquote
+              cite="https://images.brainyquote.com/quotes/alain_ducasse_672315?src=t_southwest"
             >
+              <em>
+                If you don't treat an ingredient and its flavors with respect -
+                if you drown it in oil, for instance - you'll spoil it.
+                <b><u>Allain Ducasse</u></b>
+              </em>
+            </blockquote>
           </figcaption>
         </figure>
         <div class="bio-content">
@@ -87,12 +117,16 @@
         </div>
       </section>
     </main>
-    <footer class="footer-section">
+    <footer class="footer-content">
       <p class="footer-title">Easy Kitchen Blog®</p>
       <ul class="footer-list">
-        <li class="footer-list-item"><a>Facebook</a></li>
-        <li class="footer-list-item"><a>Instagram</a></li>
-        <li class="footer-list-item"><a>Twitter</a></li>
+        <li class="footer-list-item">
+          <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+        </li>
+        <li class="footer-list-item">
+          <a href="https://www.instagram.com" target="_blank">Instagram</a>
+        </li>
+        <li class="footer-list-item"><a href="https://www.twitter.com" target="_blank">Twitter</a></li>
       </ul>
     </footer>
   </body>
