--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Easy recipes blog" />
     <title>Easy Kitchen Blog</title>
-    <link rel="stylesheet" href="./styles/homepage.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <!-- headlines font -->
     <link
@@ -15,7 +15,7 @@
     />
     <!-- body font  -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -25,7 +25,9 @@
         <ul class="nav-list">
           <li class="nav-item"><a href="index.html">Homepage</a></li>
           <li class="nav-item"><a href="./pages/blogpost.html">Blogpost</a></li>
-          <li class="nav-item"><a href="./pages/blogpost.html#about">About</a></li>
+          <li class="nav-item">
+            <a href="./pages/blogpost.html#about">About</a>
+          </li>
         </ul>
       </nav>
       <section class="fullwidth-header">
@@ -47,7 +49,7 @@
           scrambled
         </p>
         <button class="card-btn" type="button">
-          <a href="./pages/blogpost.html">To article</a>
+          <a class="card-btn-link" href="./pages/blogpost.html">To article</a>
         </button>
       </div>
       <div class="card">
@@ -64,16 +66,22 @@
           scrambled
         </p>
         <button class="card-btn" type="button">
-          <a href="./pages/blogpost.html">To article</a>
+          <a class="card-btn-link" href="./pages/blogpost.html">To article</a>
         </button>
       </div>
     </main>
     <footer class="footer-content" id="about">
       <p class="footer-title">Easy Kitchen Blog®</p>
       <ul class="footer-list">
-        <li class="footer-list-item"><a>Facebook</a></li>
-        <li class="footer-list-item"><a>Instagram</a></li>
-        <li class="footer-list-item"><a>Twitter</a></li>
+        <li class="footer-list-item">
+          <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+        </li>
+        <li class="footer-list-item">
+          <a href="https://www.instagram.com" target="_blank">Instagram</a>
+        </li>
+        <li class="footer-list-item">
+          <a href="https://www.twitter.com" target="_blank">Twitter</a>
+        </li>
       </ul>
     </footer>
   </body>
